--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,25 +1,41 @@
-name: Java CI with Maven
+name: Java CI
 
-on: [push,pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 1.8
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up JDK 8
       uses: actions/setup-java@v3
       with:
-        java-version: '8.0.412+8'
+        java-version: '8'
         distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - name: Test with JaCoCo
-      run: mvn test jacoco:report
-    - name: Report to Coveralls
-      env:
-        COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
-      run: mvn coveralls:report
+
+    - name: Clean and install dependencies
+      run: mvn clean install -B
+
+    - name: Build and test with Maven
+      run: mvn verify -B
+
+    - name: Upload coverage to Coveralls
+      if: success()
+      uses: coverallsapp/github-action@v2
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        path-to-lcov: target/site/jacoco/jacoco.xml
+        flag-name: maven
+        parallel: true
+        env:
+          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
