--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,41 +1,47 @@
-name: Java CI
+name: Java CI with Maven
 
-on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main]
+on: [push]
 
 jobs:
   build:
+
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pull-requests: write
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
-    - name: Set up JDK 8
+    - name: Set up JDK 1.8
       uses: actions/setup-java@v3
       with:
-        java-version: '8'
+        java-version: '8.0.412+8'
         distribution: 'temurin'
+        cache: maven
 
-    - name: Clean and install dependencies
-      run: mvn clean install -B
+    - name: Build and Checkstyle with Maven
+      working-directory: ./roman-number
+      run: mvn -B clean install
 
-    - name: Build and test with Maven
-      run: mvn verify -B
+    - name: Test with JaCoCo
+      working-directory: ./roman-number
+      run: mvn test jacoco:report
 
-    - name: Upload coverage to Coveralls
-      if: success()
-      uses: coverallsapp/github-action@v2
+    - name: Report to Coveralls
+      working-directory: ./roman-number
+      env:
+        COVERALLS_REPO_TOKEN: ${{secrets.COVERALLS_REPO_TOKEN}}
+      run: mvn coveralls:report
+
+    - name: Create Site
+      working-directory: ./roman-number
+      run: |
+        mvn site checkstyle:checkstyle
+        mkdir -p target/site  # Crea la cartella se non esiste
+        touch target/site/.nojekyll
+
+    - name: Upload Site
+      uses: peaceiris/actions-gh-pages@v4
       with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: target/site/jacoco/jacoco.xml
-        flag-name: maven
-        parallel: true
-        env:
-          COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_REPO_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./roman-number/target/site
+        publish_branch: gh-pages
+        keep_files: false
